# Image-Classification-Project

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml  submission.csv
app/: streamlit_app.py
notebook/: final_notebook.ipynb  private_test_submission.ipynb
scripts/: __init__.py  evaluate.py  predict_submission.py  prepare_data.py  train.py
src/image_classification/: __init__.py  config.py  data.py  evaluate.py  inference.py  model.py  training.py
src/image_classification_trashnet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
